k8s/sablier.k8s.yml
# https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/middleware/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier
  namespace: ${K8S_NAMESPACE}
spec:
  plugin:
    sablier:
      group: ${K8S_NAMESPACE}
      dynamic:
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier-sablier.sablier.svc.cluster.local:10000
      sessionDuration: 15m
